# Uni_labs

./: .gitignore  .gitignore.swp
Lab1/: .gitignore  CMakeLists.txt  main.cpp  prog
Lab1/containers_with_myptrs/: Sequence_container_interface.h  arrseq_myptrs.cpp  arrseq_myptrs.h  darr_myptrs.cpp  darr_myptrs.h  linkedlist.cpp  linkedlist.h  listseq_myptrs.cpp  listseq_myptrs.h
Lab1/libs/: colour.h  except.h
Lab1/prog.dSYM/Contents/Resources/DWARF/: prog
Lab1/ptrs/: shared.cpp  shared.h  unique.cpp  unique.h
Lab1/shapes/: Square.h  circle.h  shapes.h
Lab1/tests/: heavy_tests_ptr_no_container.cpp  heavy_tests_ptr_no_container.h  test_derived.cpp  test_derived.h  test_ptr_container.cpp  test_ptr_container.h  test_ptr_no_containers.cpp  test_ptr_no_containers.h  tests.h
Lab1/ui/: ui.cpp  ui.h
Lab2/: CMakeLists.txt  ISorter.h  bubblesort.h  cocktailsort.h  genseq.h  graphics.py  heavy_tests.cpp  main.cpp  mergesort.h  prog  quicksort.h  test_myptrs.cpp  test_myptrs.h  ui.cpp  ui.h
Lab2/prog.dSYM/Contents/Resources/DWARF/: prog
Lab3/: ui.cpp
